Add table contents for Ninja/Alchemist/Druid HTML files; added hyphen to Tack html header table

--- a/alchemist.html
+++ b/alchemist.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Alchemist Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Alchemist (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$550</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -22,15 +22,19 @@
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <th>Damage over time</th>
+                    <td>1 damage / 2s</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>2s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Medium (45 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
@@ -38,15 +42,15 @@
                 </tr>
                 <tr>
                     <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <td>Purple, White, Black, Lead</td>
                 </tr>
                 <tr>
                     <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
+                    <td>Camo</td>
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Ignores map obstacles, splash attacks</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +63,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Larger Potions</th>
+                    <th>Acidic Mixture Dip</th>
+                    <th>Berserker Brew</th>
+                    <th>Stronger Stimulant</th>
+                    <th>Permanent Brew</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>350</td>
+                    <td>1,400</td>
+                    <td>2,850</td>
+                    <td>48,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +96,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Stronger Acid</th>
+                    <th>Perishing Potions</th>
+                    <th>Unstable Concoction</th>
+                    <th>Transforming Tonic</th>
+                    <th>Total Transformation</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>475</td>
+                    <td>2,800</td>
+                    <td>4,200</td>
+                    <td>45,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +129,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Faster Throwing</th>
+                    <th>Acid Pool</th>
+                    <th>Lead to Gold</th>
+                    <th>Rubber to Gold</th>
+                    <th>Bloon Master Alchemist</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>650</td>
+                    <td>450</td>
+                    <td>1,000</td>
+                    <td>2,750</td>
+                    <td>40,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
