--- a/druid.html
+++ b/druid.html
@@ -3,38 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Druid Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Druid (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$400</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
-                    <td>1</td>
+                    <td>5x1</td>
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>1</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.1s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Small (35 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Medium</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Throws 5 projectiles/attack in 25-degree cone</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Hard Thorns</th>
+                    <th>Heart of Thunder</th>
+                    <th>Druid of the Storm</th>
+                    <th>Ball Lightning</th>
+                    <th>Monarch of Storms</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>350</td>
+                    <td>850</td>
+                    <td>1,700</td>
+                    <td>4,500</td>
+                    <td>60,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Thorn Swarm</th>
+                    <th>Heart of Oak</th>
+                    <th>Druid of the Jungle</th>
+                    <th>Jungle's Bounty</th>
+                    <th>Spirit of the Forest</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>350</td>
+                    <td>1,050</td>
+                    <td>4,900</td>
+                    <td>35,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Druidic Reach</th>
+                    <th>Heart of Vengeance</th>
+                    <th>Druid of Wrath</th>
+                    <th>Poplust</th>
+                    <th>Avatar of Wrath</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
                     <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>600</td>
+                    <td>2,350</td>
+                    <td>45,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
