--- a/ninja.html
+++ b/ninja.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Ninja Monkey Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Ninja Monkey (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$400</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -26,11 +26,11 @@
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>0.62s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Medium (40 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
@@ -38,11 +38,11 @@
                 </tr>
                 <tr>
                     <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <td>Purple, White, Black, Camo</td>
                 </tr>
                 <tr>
                     <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
+                    <td>Lead</td>
                 </tr>
                 <tr>
                     <th>Other perks</th>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Ninja Discipline</th>
+                    <th>Sharp Shurikens</th>
+                    <th>Double Shot</th>
+                    <th>Bloonjitsu</th>
+                    <th>Grandmaster Ninja</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>350</td>
+                    <td>350</td>
+                    <td>900</td>
+                    <td>2,750</td>
+                    <td>35,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Distraction</th>
+                    <th>Counter-Espionage</th>
+                    <th>Shinobi Tactics</th>
+                    <th>Bloon Sabotage</th>
+                    <th>Grand Saboteur</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>400</td>
+                    <td>1,200</td>
+                    <td>5,200</td>
+                    <td>22,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Seeking Shuriken</th>
+                    <th>Caltrops</th>
+                    <th>Flash Bomb</th>
+                    <th>Sticky Bomb</th>
+                    <th>Master Bomber</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>450</td>
+                    <td>2,250</td>
+                    <td>5,000</td>
+                    <td>40,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
