--- a/tack.html
+++ b/tack.html
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>Fires 8 tacks at once over 360 degree area</td>
+                    <td>Fires 8 tacks at once over 360-degree area</td>
                 </tr>
             </tbody>
         </table>
