Add table contents for Mermonkey/Banana/SpikeFactory HTML files

--- a/mermonkey.html
+++ b/mermonkey.html
@@ -3,42 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Mermonkey Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Mermonkey (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$375</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <th>Pierce</th>
                     <td>2</td>
                 </tr>
                 <tr>
-                    <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <th>Pierce</th>
+                    <td>2 (trident), 3 (splash)</td>
                 </tr>
                 <tr>
-                    <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <th>Attack cooldown</th>
+                    <td>1.2s</td>
+                </tr>
+                <tr>
+                    <th>Range (land)</th>
+                    <td>Very Small (28 units)</td>
+                </tr>
+                <tr>
+                    <th>Range (water)</th>
+                    <td>Small (35 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Slightly Large</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <td>Purple, White, Black, Frozen</td>
                 </tr>
                 <tr>
                     <th>Cannot pop</th>
@@ -46,7 +50,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Amphibious, small splash attack</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +63,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Trident Efficiency</th>
+                    <th>Trident Swiftness</th>
+                    <th>Abyss Dweller</th>
+                    <th>Abyssal Warrior</th>
+                    <th>Lord of the Abyss</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>150</td>
+                    <td>250</td>
+                    <td>1,600</td>
+                    <td>4,200</td>
+                    <td>23,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +96,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Sharper Prongs</th>
+                    <th>Tidal Chill</th>
+                    <th>Riptide Champion</th>
+                    <th>Arctic Knight</th>
+                    <th>Popseidon</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
                     <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>2,300</td>
+                    <td>8,000</td>
+                    <td>52,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +129,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Echosense Precision</th>
+                    <th>Echosense Network</th>
+                    <th>Alluring Melody</th>
+                    <th>Symphonic Resonance</th>
+                    <th>The Final Harmonic</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
+                    <td>300</td>
+                    <td>380</td>
                     <td>2,000</td>
-                    <td>20,000</td>
+                    <td>7,600</td>
+                    <td>25,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
