--- a/spikefactory.html
+++ b/spikefactory.html
@@ -3,50 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Spike Factory Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Spike Factory (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$1,000</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
                     <td>1</td>
                 </tr>
                 <tr>
-                    <th>Pierce</th>
-                    <td>2</td>
+                    <th>Pierce (aka spikes/stack)</th>
+                    <td>5</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.75s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Small (34 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Slightly Large</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <td>Purple, White, Black, Camo</td>
                 </tr>
                 <tr>
                     <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
+                    <td>Lead</td>
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Ignores map obstacles</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Bigger Stacks</th>
+                    <th>White Hot Spikes</th>
+                    <th>Spiked Balls</th>
+                    <th>Spiked Mines</th>
+                    <th>Super Mines</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>800</td>
+                    <td>600</td>
+                    <td>2,300</td>
+                    <td>9,500</td>
+                    <td>125,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Faster Production</th>
+                    <th>Even Faster Production</th>
+                    <th>MOAB SHREDR</th>
+                    <th>Spike Storm</th>
+                    <th>Carpet of Spikes</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>600</td>
+                    <td>800</td>
+                    <td>2,500</td>
+                    <td>7,000</td>
+                    <td>41,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Long Reach</th>
+                    <th>Smart Spikes</th>
+                    <th>Long Life Spikes</th>
+                    <th>Deadly Spikes</th>
+                    <th>Perma-spike</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>150</td>
+                    <td>400</td>
+                    <td>1,300</td>
+                    <td>3,600</td>
+                    <td>30,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
