--- a/banana.html
+++ b/banana.html
@@ -3,50 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Banana Farm Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Banana Farm (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$1,250</td>
                 </tr>
                 <tr>
-                    <th>Damage</th>
-                    <td>1</td>
+                    <th>Banana value</th>
+                    <td>$20</td>
                 </tr>
                 <tr>
-                    <th>Pierce</th>
-                    <td>2</td>
+                    <th>Banana count/round</th>
+                    <td>4</td>
                 </tr>
                 <tr>
-                    <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <th>Banana lifetime</th>
+                    <td>15s</td>
                 </tr>
                 <tr>
-                    <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <th>Income/round</th>
+                    <td>$80</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
-                </tr>
-                <tr>
-                    <th>Can pop</th>
-                    <td>Purple, White, Black</td>
-                </tr>
-                <tr>
-                    <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
-                </tr>
-                <tr>
-                    <th>Other perks</th>
-                    <td>None</td>
+                    <td>Extremely Large (30x30 units)</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +47,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Increased Production</th>
+                    <th>Greater Production</th>
+                    <th>Banana Plantation</th>
+                    <th>Banana Research Facility</th>
+                    <th>Banana Central</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
                     <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>600</td>
+                    <td>3,000</td>
+                    <td>19,000</td>
+                    <td>115,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +80,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Long Life Bananas</th>
+                    <th>Valuable Bananas</th>
+                    <th>Monkey Bank</th>
+                    <th>IMF Loan</th>
+                    <th>Monkey-Nomics</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>800</td>
+                    <td>3,650</td>
+                    <td>7,200</td>
+                    <td>100,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +113,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>EZ Collect</th>
+                    <th>Banana Salvage</th>
+                    <th>Marketplace</th>
+                    <th>Central Market</th>
+                    <th>Monkey Wall Street</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>400</td>
+                    <td>2,700</td>
+                    <td>15,000</td>
+                    <td>70,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
