--- a/village.html
+++ b/village.html
@@ -3,50 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Monkey Village Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Monkey Village (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
-                </tr>
-                <tr>
-                    <th>Damage</th>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <th>Pierce</th>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>$1,200</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Medium (40 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Large</td>
                 </tr>
                 <tr>
-                    <th>Can pop</th>
-                    <td>Purple, White, Black</td>
-                </tr>
-                <tr>
-                    <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
-                </tr>
-                <tr>
-                    <th>Other perks</th>
-                    <td>None</td>
+                    <th>Provided Buffs</th>
+                    <td>+10% attack range to nearby monkeys</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +39,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Bigger Radius</th>
+                    <th>Jungle Drums</th>
+                    <th>Primary Mentoring</th>
+                    <th>Primary Academy</th>
+                    <th>Primary Expertise</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$400</td>
+                    <td>$1,500</td>
+                    <td>$800</td>
+                    <td>$2,500</td>
+                    <td>$25,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +72,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Regrow Blocker</th>
+                    <th>Radar Scanner</th>
+                    <th>Monkey Intelligence Bureau</th>
+                    <th>Call to Arms</th>
+                    <th>Homeland Defense</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$250</td>
+                    <td>$2,000</td>
+                    <td>$7,500</td>
+                    <td>$20,000</td>
+                    <td>$40,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +105,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Monkey Business</th>
+                    <th>Monkey Commerce</th>
+                    <th>Monkey Town</th>
+                    <th>Monkey City</th>
+                    <th>Monkeyopolis</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$500</td>
+                    <td>$500</td>
+                    <td>$10,000</td>
+                    <td>$3,000</td>
+                    <td>$5,000/Banana Farm in radius</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
