--- a/beasthandler.html
+++ b/beasthandler.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Beast Handler Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Beast Handler (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$250</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -22,31 +22,35 @@
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>1 (staff), 4 (splash)</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.4s</td>
                 </tr>
                 <tr>
-                    <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <th>Range (staff)</th>
+                    <td>Very Small (20 units)</td>
+                </tr>
+                <tr>
+                    <th>Range (beast placement)</th>
+                    <td>Large (60 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Medium</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <td>White, Black, Frozen</td>
                 </tr>
                 <tr>
                     <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
+                    <td>Camo, Lead, Purple</td>
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Small splash attack (staff)</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +63,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Piranha</th>
+                    <th>Barracuda</th>
+                    <th>Great White Shark</th>
+                    <th>Orca</th>
+                    <th>Megalodon</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$160</td>
+                    <td>$810</td>
+                    <td>$2,010</td>
+                    <td>$12,500</td>
+                    <td>$45,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +96,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Microraptor</th>
+                    <th>Adasaurus</th>
+                    <th>Velociraptor</th>
+                    <th>Tyrannosaurus Rex</th>
+                    <th>Giganotosaurus</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$175</td>
+                    <td>$830</td>
+                    <td>$2,065</td>
+                    <td>$9,500</td>
+                    <td>$60,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +129,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Gyrfalcon</th>
+                    <th>Horned Owl</th>
+                    <th>Golden Eagle</th>
+                    <th>Giant Condor</th>
+                    <th>Pouákai</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>$190</td>
+                    <td>$860</td>
+                    <td>$2,120</td>
+                    <td>$9,000</td>
+                    <td>$30,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
