Added image/3rd party API placeholder to index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
     <footer>
         <hr />
         <h1>About BTD6</h1>
+        
+        <div id="picture">
+            <img src="BTD6.png" width="400px" alt="BTD6"/>
+        </div>
+
         <p>
             Bloons Tower Defense 6 is a strategy-oriented tower defense game in which you must make use of the 25 Monkey towers to pop waves of Bloons 
             that will follow a set path along a track on screen. Bloons come in various "flavors" that will make them immune to the
@@ -82,6 +87,8 @@
             each tower and their upgrades, particularly the ones the game hides from you. Good luck!
         </p>
         <span>Created by Parker Remund</span>
+
+        <div id="quote">"Words are cheap. Show me the code." - Linus Torvalds</div>
     </footer>
 </body>
 </html>
