Moved about section to separate HTML file for easier formatting, created new CSS file for about website

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
 
     <main>
-        <h1>Welcome to the BTD6 Cheat Sheet!</h1>
-        <form>
+        <h1 class="login">Welcome to the BTD6 Cheat Sheet!</h1>
+        <form class="login">
             <div>
                 <span>@</span>
                 <input type ="text" placeholder="name@emailname.com"/>
@@ -82,22 +82,7 @@
 
     <footer>
         <hr />
-        <h1>About BTD6</h1>
-        
-        <div id="picture">
-            <img src="BTD6.png" width="400px" alt="BTD6"/>
-        </div>
-
-        <p>
-            Bloons Tower Defense 6 is a strategy-oriented tower defense game in which you must make use of the 25 Monkey towers to pop waves of Bloons 
-            that will follow a set path along a track on screen. Bloons come in various "flavors" that will make them immune to the
-            attacks of some towers but vulnerable to others. In addition, each of your towers will have 15 unique upgrades to select
-            from to improve your chances of winning. This interactable cheat sheet will help you learn the more detailed stats of 
-            each tower and their upgrades, particularly the ones the game hides from you. Good luck!
-        </p>
-        <span>Created by Parker Remund</span>
-
-        <div id="quote">"Words are cheap. Show me the code." - Linus Torvalds</div>
+        <a href="about.html">About BTD6</h1>
     </footer>
 </body>
 </html>
