--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About BTD6</title>
     
+    <link rel="stylesheet" href="main.css"/>
     <link rel="stylesheet" href="about.css"/>
 
     <link
@@ -14,11 +15,11 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
-    <header>
+<body class="bg-dark text-light">
+    <header class="container-fluid">
         <h1>About BTD6</h1>
     </header>
-    <main>
+    <main id="about" class="bg-secondary container-fluid text-center">
         <div id="picture" class="picture-box">
             <img src="BTD6.png" width="400px" alt="BTD6"/>
         </div>
@@ -30,13 +31,16 @@
             from to improve your chances of winning. This interactable cheat sheet will help you learn the more detailed stats of 
             each tower and their upgrades, particularly the ones the game hides from you. Good luck!
         </p>
-        <span>Created by Parker Remund</span>
 
-        <div id="quote">"Words are cheap. Show me the code." - Linus Torvalds</div>
+        <div id="quote" class="bg-light text-dark">"Words are cheap. Show me the code." - Linus Torvalds</div>
+
+        <div>
+            <a href="index.html">Back to Home</a>
+        </div>
     </main>
 
-    <footer>
-        <a href="index.html">Back to Home</a>
+    <footer class="bg-dark text-white-50 container-fluid">
+        <span>Created by Parker Remund</span>
     </footer>
 </body>
 </html>
